After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750668 - vtenc: gst_vtenc_frame_free on error
vtenc: gst_vtenc_frame_free on error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal normal
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-09 20:49 UTC by Ilya Konstantinov
Modified: 2015-06-10 08:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vtenc: gst_vtenc_frame_free on error (782 bytes, patch)
2015-06-09 20:50 UTC, Ilya Konstantinov
committed Details | Review

Description Ilya Konstantinov 2015-06-09 20:49:21 UTC
Add missing gst_vtenc_frame_free.
Comment 1 Ilya Konstantinov 2015-06-09 20:50:20 UTC
Created attachment 304894 [details] [review]
vtenc: gst_vtenc_frame_free on error

Trivial fix.