vtenc: Add missing gst_vtenc_frame_free() in error path

https://bugzilla.gnome.org/show_bug.cgi?id=750668